force-app/main/default/objects/Unified_Individual__c/Unified_Individual__c.object-meta.xml
<CustomObject>
    <label>Unified Individual</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unified Individuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>