force-app/main/default/objects/Unified_Individual__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>