force-app/main/default/objects/Unified_Individual__c/fields/Income_Segment__c.field-meta.xml
<CustomField>
    <fullName>Income_Segment__c</fullName>
    <label>Income Segment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>