force-app/main/default/objects/Unified_Individual__c/fields/Last_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Date__c</fullName>
    <label>Last Purchase Date</label>
    <type>Date</type>
</CustomField>