force-app/main/default/objects/Unified_Individual__c/fields/Total_Order_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Count__c</fullName>
    <label>Total Order Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>