force-app/main/default/objects/Unified_Individual__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>City__c</columns>
    <columns>PIN_Code__c</columns>
    <columns>Income_Segment__c</columns>
    <columns>Last_Purchase_Date__c</columns>
    <columns>Total_Spend__c</columns>
    <columns>Total_Order_Count__c</columns>
    <columns>Loyalty_Tier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>